ST6RI-904 Reviewed and corrected KerML ValidationCheckers.