@@ -1,8 +1,8 @@
 package org.omg.kerml.validation.checker;
 
+import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import org.eclipse.emf.common.util.EList;
 import org.omg.kerml.util.ValidationUtil;
@@ -10,6 +10,7 @@ import org.omg.kerml.validation.ValidationMessageAccepter;
 import org.omg.sysml.lang.sysml.CrossSubsetting;
 import org.omg.sysml.lang.sysml.Element;
 import org.omg.sysml.lang.sysml.Feature;
+import org.omg.sysml.lang.sysml.Multiplicity;
 import org.omg.sysml.lang.sysml.ReferenceSubsetting;
 import org.omg.sysml.lang.sysml.Relationship;
 import org.omg.sysml.lang.sysml.SysMLPackage;
@@ -41,6 +42,8 @@ public class FeatureValidationChecker extends TypeValidationChecker {
 		validateFeatureOwnedCrossSubsetting(element, messageAccepter);
 		validateFeatureOwnedReferenceSubsetting(element, messageAccepter);
 		validateFeaturePortionNotVariable(element, messageAccepter);
+		
+		validateRedefinitionDirectionConformance(element, messageAccepter);
 	}
 	
 	public void validateFeatureHasType_(Element element, ValidationMessageAccepter messageAccepter) {
@@ -77,14 +80,14 @@ public class FeatureValidationChecker extends TypeValidationChecker {
 	
 	public void validateFeatureChainingFeaturesNotSelf(Element element, ValidationMessageAccepter messageAccepter) {
 		if (element instanceof Feature f) {
-			ValidationUtil.checkTargetNotObject(f, null, messageAccepter, "validateFeatureChainingFeatureNotSelf");
+			ValidationUtil.checkTargetNotObject(f, f.getOwnedFeatureChaining(), messageAccepter, "validateFeatureChainingFeatureNotSelf");
 		}
 	}
 	
 	public void validateFeatureConstantIsVariable(Element element, ValidationMessageAccepter messageAccepter) {
 		if (element instanceof Feature f) {
 			if (f.isConstant() && !f.isVariable()) {
-				messageAccepter.error(element, null, "validationFeatureConstantIsVariable");
+				messageAccepter.error(f, null, "validationFeatureConstantIsVariable");
 			}
 		}
 	}
@@ -95,12 +98,12 @@ public class FeatureValidationChecker extends TypeValidationChecker {
 			Feature ownedCrossFeature = f.ownedCrossFeature(); 
 			if (crossFeature != null) {
 				var redefinedFeatures = FeatureUtil.getRedefinedFeaturesWithComputedOf(f);
-				boolean hasInvalidSpecialization = redefinedFeatures.stream().map(rf->FeatureUtil.getCrossFeatureOf(rf)).anyMatch(cf -> cf != null && !TypeUtil.specializes(crossFeature, cf));
+				boolean hasInvalidSpecialization = redefinedFeatures.stream().map(FeatureUtil::getCrossFeatureOf).anyMatch(cf -> cf != null && !TypeUtil.specializes(crossFeature, cf));
 				if (hasInvalidSpecialization) {
 					   if (f.getOwnedCrossSubsetting() == null) {
 						   messageAccepter.error(ownedCrossFeature, null, "validateFeatureCrossSpecialization");
 					   } else {
-						   messageAccepter.error(crossFeature, null, "validateFeatureCrossSpecialization");
+						   messageAccepter.error(f.getOwnedCrossSubsetting(), SysMLPackage.eINSTANCE.getCrossSubsetting_CrossedFeature(), "validateFeatureCrossSpecialization");
 					   }
 				}
 			}
@@ -111,13 +114,13 @@ public class FeatureValidationChecker extends TypeValidationChecker {
 		if (element instanceof Feature f) {
 			Feature crossFeature = FeatureUtil.getCrossFeatureOf(f);
 			if (crossFeature != null) {
-				Set<?> crossFeatureSet = new java.util.HashSet<>(crossFeature.getType());
-				Set<?> fSet = new java.util.HashSet<>(f.getType());
+				Set<?> crossFeatureSet = new HashSet<>(crossFeature.getType());
+				Set<?> fSet = new HashSet<>(f.getType());
 				if (!crossFeatureSet.equals(fSet)) {
 					if (f.getOwnedCrossSubsetting() == null) {
 						messageAccepter.error(crossFeature, null, "validateFeatureCrossFeatureType");
 					} else {
-						messageAccepter.error(f.getOwnedCrossSubsetting(), null, "validateFeatureCrossFeatureType");
+						messageAccepter.error(f.getOwnedCrossSubsetting(), SysMLPackage.eINSTANCE.getCrossSubsetting_CrossedFeature(), "validateFeatureCrossFeatureType");
 					}
 				}
 			}
@@ -150,10 +153,10 @@ public class FeatureValidationChecker extends TypeValidationChecker {
 		if (element instanceof Feature f) {
 			if (f.isEnd()) {
 				boolean hasOne = f.multiplicities().stream()
-				        .map(mult -> FeatureUtil.getMultiplicityRangeOf(mult))
+				        .map(FeatureUtil::getMultiplicityRangeOf)
 				        .anyMatch(range -> range != null && range.hasBounds(1, 1));
 				if (!hasOne) {
-					messageAccepter.warning(element, null, "validateFeatureEndMultiplicity");
+					messageAccepter.warning(f, null, "validateFeatureEndMultiplicity");
 				}
 			}
 		}
@@ -178,7 +181,8 @@ public class FeatureValidationChecker extends TypeValidationChecker {
 	
 	public void validateFeatureIsVariable(Element element, ValidationMessageAccepter messageAccepter) {
 		if (element instanceof Feature f) {
-			if (f.isVariable() && (f.getOwningType() == null) || !TypeUtil.specializes(f.getOwningType(), SysMLLibraryUtil.getLibraryType(f, "Occurrences::Occurrence"))) {
+			if (f.isVariable() && (f.getOwningType() == null) || 
+				!TypeUtil.specializes(f.getOwningType(), SysMLLibraryUtil.getLibraryType(f, "Occurrences::Occurrence"))) {
 				messageAccepter.error(f, null, "validateFeatureIsVariable");
 			}
 		}
@@ -186,13 +190,8 @@ public class FeatureValidationChecker extends TypeValidationChecker {
 	
 	public void validateFeatureMultiplicityDomain(Element element, ValidationMessageAccepter messageAccepter) {
 		if (element instanceof Feature f) {
-			var m = f.getMultiplicity();
-			var featuringTypes = f.getFeaturingType();
-			var mFeaturingTypes = FeatureUtil.isOwnedCrossFeature(f) 
-			    ? ((Feature) f.getOwningNamespace()).getFeaturingType() 
-			    : featuringTypes;
-
-			if (m != null && !new java.util.HashSet<>(mFeaturingTypes).equals(new java.util.HashSet<>(m.getFeaturingType()))) {
+			Multiplicity m = f.getMultiplicity();
+			if (m != null && !new HashSet<>(f.getFeaturingType()).equals(new HashSet<>(m.getFeaturingType()))) {
 			    messageAccepter.error(f, null, "validateFeatureMultiplicityDomain");
 			}
 		}
@@ -200,10 +199,10 @@ public class FeatureValidationChecker extends TypeValidationChecker {
 	
 	public void validateFeatureOwnedCrossSubsetting(Element element, ValidationMessageAccepter messageAccepter) {
 		if (element instanceof Feature f) {
-			List<Relationship> crossSubsettings = f.getOwnedRelationship().stream().filter(r -> r instanceof CrossSubsetting).collect(Collectors.toList());
+			List<Relationship> crossSubsettings = f.getOwnedRelationship().stream().filter(CrossSubsetting.class::isInstance).toList();
 			if (crossSubsettings.size() > 1) {
 				for (int i = 1; i < crossSubsettings.size(); i++) {
-					messageAccepter.error(crossSubsettings.get(i), null, "validateFeatureOwnedSubsetting");
+					messageAccepter.error(crossSubsettings.get(i), null, "validateFeatureOwnedCrossSubsetting");
 				}
 			}
 		}
@@ -212,8 +211,7 @@ public class FeatureValidationChecker extends TypeValidationChecker {
 	public void validateFeatureOwnedReferenceSubsetting(Element element, ValidationMessageAccepter messageAccepter) {
 		if (element instanceof Feature f) {
 			List<Relationship> refSubsettings = f.getOwnedRelationship().stream()
-				    .filter(r -> r instanceof ReferenceSubsetting)
-				    .collect(Collectors.toList());
+				    .filter(ReferenceSubsetting.class::isInstance).toList();
 
 			if (refSubsettings.size() > 1) {
 			    for (int i = 1; i < refSubsettings.size(); i++) {
@@ -227,6 +225,17 @@ public class FeatureValidationChecker extends TypeValidationChecker {
 		if (element instanceof Feature f) {
 			if (f.isPortion() && f.isVariable()) {
 				messageAccepter.error(f, null, "validateFeaturePortionNotVariable");
+			}
+		}
+	}
+	
+	/**
+	 * For implicit Redefinitions.
+	 */
+	public void validateRedefinitionDirectionConformance(Element element, ValidationMessageAccepter messageAccepter) {
+		if (element instanceof Feature f) {
+			for (Type redefinedFeature: TypeUtil.getImplicitGeneralTypesOnly(f, SysMLPackage.eINSTANCE.getRedefinition())) {
+				RedefinitionValidationChecker.checkRedefinitionDirection(f, (Feature)redefinedFeature, f, messageAccepter);
 			}
 		}
 	}
