@@ -1,13 +1,16 @@
 package org.omg.kerml.validation.checker;
 
-import java.util.stream.Collectors;
+import java.util.List;
 
 import org.omg.kerml.validation.ValidationMessageAccepter;
 import org.omg.sysml.lang.sysml.Element;
+import org.omg.sysml.lang.sysml.Expression;
 import org.omg.sysml.lang.sysml.Feature;
+import org.omg.sysml.lang.sysml.FeatureValue;
 import org.omg.sysml.lang.sysml.Metaclass;
 import org.omg.sysml.lang.sysml.MetadataFeature;
 import org.omg.sysml.lang.sysml.SysMLPackage;
+import org.omg.sysml.lang.sysml.Type;
 import org.omg.sysml.util.ElementUtil;
 import org.omg.sysml.util.EvaluationUtil;
 import org.omg.sysml.util.FeatureUtil;
@@ -30,12 +33,11 @@ public class MetadataFeatureValidationChecker extends AnnotatingElementValidatio
 						
 	public void validateMetadataFeatureAnnotatedElement(Element element, ValidationMessageAccepter messageAccepter) {
 		if (element instanceof MetadataFeature mf) {
-			var annotatedElementFeatures = FeatureUtil.getAllSubsettingFeaturesIn(mf, EvaluationUtil.getAnnotatedElementFeature(mf));
+			List<Feature> annotatedElementFeatures = FeatureUtil.getAllSubsettingFeaturesIn(mf, EvaluationUtil.getAnnotatedElementFeature(mf));
 
 			if (annotatedElementFeatures.stream().anyMatch(f -> !f.isAbstract())) {
 			    annotatedElementFeatures = annotatedElementFeatures.stream()
-			            .filter(f -> !f.isAbstract())
-			            .collect(Collectors.toList());
+			            .filter(f -> !f.isAbstract()).toList();
 			}
 			if (!annotatedElementFeatures.isEmpty()) {
 			    for (var ae : mf.getAnnotatedElement()) {
@@ -46,7 +48,7 @@ public class MetadataFeatureValidationChecker extends AnnotatingElementValidatio
 			                f.getType().stream().allMatch(t -> TypeUtil.specializes(metaclass, t)));
 			            
 			            if (!matchesAnyFeature) {
-			            	messageAccepter.error(mf, null, metaclass.getDeclaredName(), "validateMetadataFeatureAnnotatedElement");
+			            	messageAccepter.error(mf, null, "validateMetadataFeatureAnnotatedElement", metaclass.getDeclaredName());
 			            }
 			        }
 			    }
@@ -56,15 +58,16 @@ public class MetadataFeatureValidationChecker extends AnnotatingElementValidatio
 	
 	public void validateMetadataFeatureBody(Element element, ValidationMessageAccepter messageAccepter) {
 		if (element instanceof MetadataFeature mf) {
-			// validateMetadataFeatureBody
 		    checkMetadataBody(mf, messageAccepter);
 		}
 	}
+	
 	private void checkMetadataBody(Feature t, ValidationMessageAccepter messageAccepter) {
 	    for (Feature f : t.getOwnedFeature()) {
 	        checkMetadataBodyFeature(f, messageAccepter);
 	    }
 	}
+	
 	private void checkMetadataBodyFeature(Feature f, ValidationMessageAccepter messageAccepter) {
 	    // Must redefine a feature owned by a supertype of its owner.
 	    boolean hasValidRedefinition = f.getOwnedRedefinition().stream()
@@ -76,16 +79,18 @@ public class MetadataFeatureValidationChecker extends AnnotatingElementValidatio
 	    }
     
 	    // Feature value, if any, must be model-level evaluable.
-	    var fv = FeatureUtil.getValuationFor(f);
-	    var value = (fv != null) ? fv.getValue() : null;
+	    FeatureValue fv = FeatureUtil.getValuationFor(f);
+	    Expression value = fv != null ? fv.getValue() : null;
     
 	    if (value != null && !value.isModelLevelEvaluable()) {
 	        messageAccepter.error(fv, SysMLPackage.eINSTANCE.getFeatureValue_Value(), "validateMetadataFeatureBody");
 	    }
+	    
 	    //Must have a valid metadata body.
 		checkMetadataBody(f, messageAccepter); 
 	} 
 	
+	// TODO: Submit new issue to revise this to actually fix the problem KERML-90 was trying to address.
 	public void validateMetadataFeatureMetaclass(Element element, ValidationMessageAccepter messageAccepter) {
 		if (element instanceof MetadataFeature mf) {
 			if (mf.getType().stream().filter(Metaclass.class::isInstance).count() != 1) {
@@ -96,7 +101,7 @@ public class MetadataFeatureValidationChecker extends AnnotatingElementValidatio
 	
 	public void validateMetadataFeatureMetaclassNotAbstract(Element element, ValidationMessageAccepter messageAccepter) {
 		if (element instanceof MetadataFeature mf) {
-			if (mf.getType().stream().anyMatch(type -> type.isAbstract())) {
+			if (mf.getType().stream().anyMatch(Type::isAbstract)) {
 				messageAccepter.error(mf, null, "validateMetadataFeatureMetaclass");
 			}
 		}
